--- a/app/view/uis/excel.ui
+++ b/app/view/uis/excel.ui
@@ -109,6 +109,39 @@
       <widget class="CustomTable" name="tablePreview"/>
      </item>
      <item>
+      <widget class="SmoothScrollArea" name="sheetsView">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="verticalScrollBarPolicy">
+        <enum>Qt::ScrollBarAlwaysOff</enum>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QAbstractScrollArea::AdjustIgnored</enum>
+       </property>
+       <property name="widgetResizable">
+        <bool>true</bool>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+       </property>
+       <widget class="QWidget" name="scrollAreaWidgetContents">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>988</width>
+          <height>38</height>
+         </rect>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_3"/>
+       </widget>
+      </widget>
+     </item>
+     <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0">
        <item alignment="Qt::AlignLeft">
         <widget class="PushButton" name="excelRunBtn">
@@ -131,7 +164,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="ProgressBar&#10;" name="progressBar">
+        <widget class="ProgressBar" name="progressBar">
          <property name="value">
           <number>24</number>
          </property>
@@ -160,8 +193,7 @@
    <header>qfluentwidgets</header>
   </customwidget>
   <customwidget>
-   <class>ProgressBar
-</class>
+   <class>ProgressBar</class>
    <extends>QProgressBar</extends>
    <header>qfluentwidgets</header>
   </customwidget>
@@ -169,6 +201,12 @@
    <class>CustomTable</class>
    <extends>QTableWidget</extends>
    <header>app.components.custom_table</header>
+  </customwidget>
+  <customwidget>
+   <class>SmoothScrollArea</class>
+   <extends>QScrollArea</extends>
+   <header>qfluentwidgets</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
