Added kidis parser

--- a/app/view/uis/parse.ui
+++ b/app/view/uis/parse.ui
@@ -70,6 +70,11 @@
              <string>Arena</string>
             </property>
            </item>
+           <item>
+            <property name="text">
+             <string>Kidis</string>
+            </property>
+           </item>
           </widget>
          </item>
          <item>
