--- a/app/view/uis/parse.ui
+++ b/app/view/uis/parse.ui
@@ -137,7 +137,7 @@
      <item>
       <widget class="PlainTextEdit" name="parsedOutput">
        <property name="textInteractionFlags">
-        <set>Qt::NoTextInteraction</set>
+        <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
        </property>
        <property name="placeholderText">
         <string>Output</string>
