--- a/app/view/uis/sort.ui
+++ b/app/view/uis/sort.ui
@@ -91,7 +91,7 @@
      <item>
       <widget class="PlainTextEdit" name="sortedOutput">
        <property name="textInteractionFlags">
-        <set>Qt::NoTextInteraction</set>
+        <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
        </property>
        <property name="placeholderText">
         <string>Output</string>
