--- a/app/view/uis/excel.ui
+++ b/app/view/uis/excel.ui
@@ -44,6 +44,12 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item alignment="Qt::AlignLeft">
         <widget class="SwitchButton" name="useUrlToggle">
+         <property name="minimumSize">
+          <size>
+           <width>220</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -148,8 +154,14 @@
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0">
-       <item alignment="Qt::AlignLeft">
+       <item>
         <widget class="PushButton" name="excelRunBtn">
+         <property name="minimumSize">
+          <size>
+           <width>110</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
           <string>Parse</string>
          </property>
