--- a/app/view/uis/parse.ui
+++ b/app/view/uis/parse.ui
@@ -55,26 +55,12 @@
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item alignment="Qt::AlignLeft">
           <widget class="ComboBox" name="webSiteNameCombo">
-           <item>
-            <property name="text">
-             <string>Saks85</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Saucony</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Arena</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Kidis</string>
-            </property>
-           </item>
+           <property name="iconSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
           </widget>
          </item>
          <item>
